--- a/VolunteeringUkraineMap/src/style.css
+++ b/VolunteeringUkraineMap/src/style.css
@@ -33,9 +33,8 @@ a:hover {
 }
 
 body {
-  display: flex;
-  min-width: 320px;
-  min-height: 100vh;
+  height: 100%;
+  width: 100vw;
   margin: 0;
   place-items: center;
 }
