--- a/VolunteeringUkraineMap/src/assets/styles/fonts.css
+++ b/VolunteeringUkraineMap/src/assets/styles/fonts.css
@@ -2,14 +2,13 @@
   font-weight: 100 900;
   font-family: Inter;
   font-style: normal;
-  src: url("../fonts/Inter-roman.var.woff2") format("woff2");
+  src: url("../fonts/e-ukraine/e-Ukraine-Regular.otf") format("otf");
   font-display: swap;
 }
 
 @font-face {
-  font-weight: 100 900;
+  font-weight: bold;
   font-family: Inter;
-  font-style: italic;
-  src: url("../fonts/Inter-italic.var.woff2") format("woff2");
+  src: url("../fonts/e-ukraine/e-Ukraine-Bold.otf") format("otf");
   font-display: swap;
 }
