--- a/VolunteeringUkraineMap/src/assets/styles/tailwind.css
+++ b/VolunteeringUkraineMap/src/assets/styles/tailwind.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.leaflet-container {
+  font-family: "E ukraine", sans-serif !important;
+}
+
+.popup-shadow {
+  box-shadow: 4px 4px 24px 0 rgb(166 165 165 / 17%);
+}
+
+.leaflet-popup-content {
+  margin: 20px;
+}
